kubernetes/ingress.yaml
# [DEPRECATED] Use gateway.yaml instead of this after setting Istio
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: scopelens-ingress
    annotations:
      kubernetes.io/ingress.class: "istio"
spec:
    rules:
    - host: <DOMAIN-NAME>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scopelens-website-service
                port: 
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: scopelens-server-service
                port: 
                  number: 80
          - path: /assets/sprites/
            pathType: Prefix
            backend:
              service:
                name: scopelens-server-service
                port: 
                  number: 80                
          - path: /advapi/
            pathType: Prefix
            backend:
              service:
                name: pokemon-classifier-service
                port: 
                  number: 80
